@startuml
' EER (Crow's Foot) para Artist, Album y tabla puente Artist_Album

hide circle
skinparam linetype ortho
skinparam classAttributeIconSize 0

entity "Artist" as Artist {
  *id : INT <<PK>>
  --
  name : VARCHAR(100) <<NOT NULL>>
  year : INT
  country : VARCHAR(50)
}

entity "Album" as Album {
  *id : INT <<PK>>
  --
  name : VARCHAR(150) <<NOT NULL>>
  year : INT
}

entity "Artist_Album" as Artist_Album {
  *artist_id : INT <<PK, FK>>
  *album_id  : INT <<PK, FK>>
}

' Relaciones (tabla puente para M:N)
Artist ||--o{ Artist_Album : has
Album  ||--o{ Artist_Album : includes

@enduml
